--- a/web/src/pages/Main/styles.css
+++ b/web/src/pages/Main/styles.css
@@ -1,20 +1,110 @@
+footer,
+.tables,
 .news {
   padding: 0 20%;
-  background: red;
   display: flex;
   gap: 0.5rem;
 }
 
-.col {
-  background: gray;
+.news .card-news {
   width: 100%;
-  height: 40rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+  height: 30rem;
+  position: relative;
+  overflow: hidden;
+}
+.news .card-news p,
+.news .card-news h1 {
+  height: auto;
+  position: relative;
+  text-align: left;
+  left: 4rem;
+  top: 12rem;
+  z-index: 2;
 }
 
-.cards {
-  background: pink;
+.news .card-news h1 {
+  width: 70%;
+  font-size: 3rem;
+}
+
+.news .card-news p {
+  width: 70%;
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+.news .card-news:before {
+  content: '';
+  display: block;
+  position: absolute;
+  /* left: 0; */
+  /* top: 0; */
+  width: 100%;
   height: 100%;
+  z-index: 1;
+  opacity: 0.5;
+  background-image: url('https://conteudo.imguol.com.br/c/esporte/0e/2022/04/17/isla-jogador-do-flamengo-comemora-seu-gol-com-jogadores-do-seu-time-durante-partida-contra-o-sao-paulo-1650228704306_v2_900x506.jpg');
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.tables {
+  display: grid;
+  margin-top: 2rem;
+  grid-template-columns: 1fr 1fr;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--primary-color);
+  padding: 3rem;
+  margin-top: 2rem;
+  text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+  footer,
+  .tables,
+  .news {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  footer,
+  .tables,
+  .news {
+    padding: 0;
+  }
+
+  .news .card-news p,
+  .news .card-news h1 {
+    left: 1rem;
+    top: 15rem;
+    text-shadow: 2px 2px 10px #000;
+  }
+
+  .news .card-news h1 {
+    width: 90%;
+    font-size: 1.8rem;
+  }
+
+  .news .card-news p {
+    width: 90%;
+    font-size: 1.2rem;
+  }
+
+  .tables {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+  }
+
+  footer {
+    padding: 2rem;
+    font-size: 0.8rem;
+  }
 }
