--- a/web/src/global.css
+++ b/web/src/global.css
@@ -13,7 +13,20 @@
   --bg-color: #09090a;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   background-color: var(--bg-color);
   color: white;
+  overflow: overlay;
+  /* height: 100%; */
+}
+
+html {
+  /* chrome://flags/#smooth-scrolling */
+  scroll-behavior: smooth;
 }
