--- a/web/src/pages/Tables/styles.css
+++ b/web/src/pages/Tables/styles.css
@@ -11,6 +11,7 @@
 }
 
 .content-page-table h1 {
+  margin-top: 1.5rem;
   font-weight: 500;
   color: var(--secondary-color);
   text-transform: uppercase;
