--- a/web/src/components/Supplier/styles.css
+++ b/web/src/components/Supplier/styles.css
@@ -11,6 +11,7 @@
   height: 2rem;
   margin-left: 1rem;
   color: var(--secondary-color);
+  border: 0;
   background: var(--primary-color);
   width: 12rem;
   border-radius: 4px;
