correction in scorers table

--- a/web/src/pages/Tables/styles.css
+++ b/web/src/pages/Tables/styles.css
@@ -62,7 +62,7 @@
 
 @media screen and (max-width: 1024px) {
   .tables-games {
-    padding: 0;
+    padding: 0.7rem;
   }
 
   .content-page-table {
