--- a/web/src/pages/Main/styles.css
+++ b/web/src/pages/Main/styles.css
@@ -34,12 +34,38 @@ footer,
   /* top: 0; */
   width: 100%;
   height: 100%;
-  z-index: 1;
-  opacity: 0.5;
-  background-image: url('../../assets/news/materia1.jpeg');
+  z-index: -1;
+  opacity: 0.4;
+  background-image: url('../../assets/stadium/stadium3.jpg');
   background-repeat: no-repeat;
   background-position: 50% 0;
   background-size: cover;
+}
+
+.news .card-news .row--pre-game {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: auto;
+  left: 4rem;
+  top: 12rem;
+  text-shadow: 2px 2px 10px #000;
+  z-index: 3;
+}
+
+.news .card-news .row--pre-game img {
+  width: 3rem;
+  height: 3rem;
+  margin-right: 1rem;
+  text-shadow: 2px 2px 10px #000;
+}
+
+.news .card-news .row--pre-game h5 + img {
+  margin-left: 1rem;
+}
+
+.news .card-news .row--pre-game h4 {
+  font-weight: 300;
 }
 
 .news .card-news p,
@@ -48,8 +74,9 @@ footer,
   position: relative;
   text-align: left;
   left: 4rem;
-  top: 12rem;
-  z-index: 2;
+  top: 13rem;
+  text-shadow: 2px 2px 10px #000;
+  z-index: 4;
 }
 
 .news .card-news h1 {
@@ -168,16 +195,21 @@ footer {
     margin-top: 0;
   }
 
+  .news .card-news .row--pre-game {
+    left: 1rem;
+    top: 14rem;
+  }
+
   .news .card-news p,
   .news .card-news h1 {
     left: 1rem;
     top: 15rem;
-    text-shadow: 2px 2px 10px #000;
   }
 
   .news .card-news h1 {
     width: 90%;
     font-size: 1.8rem;
+    text-transform: uppercase;
   }
 
   .news .card-news p {
