--- a/web/src/pages/Main/styles.css
+++ b/web/src/pages/Main/styles.css
@@ -49,7 +49,7 @@ footer,
   width: auto;
   left: 4rem;
   top: 12rem;
-  text-shadow: 2px 2px 10px #000;
+  /* text-shadow: 2px 2px 10px #000; */
   z-index: 3;
 }
 
@@ -64,8 +64,72 @@ footer,
   margin-left: 1rem;
 }
 
-.news .card-news .row--pre-game h4 {
+@keyframes flashesFlashes {
+  0% {
+    color: white;
+  }
+  10% {
+    color: transparent;
+  }
+  15% {
+    color: white;
+  }
+  20% {
+    color: transparent;
+  }
+  25% {
+    color: white;
+  }
+  30% {
+    color: transparent;
+  }
+  35% {
+    color: white;
+  }
+  40% {
+    color: transparent;
+  }
+  45% {
+    color: white;
+  }
+  50% {
+    color: transparent;
+  }
+  55% {
+    color: white;
+  }
+  60% {
+    color: transparent;
+  }
+  65% {
+    color: white;
+  }
+  70% {
+    color: transparent;
+  }
+  75% {
+    color: white;
+  }
+  80% {
+    color: transparent;
+  }
+  85% {
+    color: white;
+  }
+  90% {
+    color: transparent;
+  }
+  95% {
+    color: white;
+  }
+  100% {
+    color: transparent;
+  }
+}
+
+.news .card-news .row--pre-game .textFlashes {
   font-weight: 300;
+  animation: flashesFlashes 14s infinite;
 }
 
 .news .card-news p,
