--- a/web/src/pages/Main/styles.css
+++ b/web/src/pages/Main/styles.css
@@ -42,6 +42,20 @@ footer,
   background-size: cover;
 }
 
+.news .card-news .game-time {
+  position: relative;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: 700;
+  width: auto;
+  left: 4rem;
+  top: 11.5rem;
+  text-shadow: 2px 2px 10px #000;
+  z-index: 3;
+}
+
 .news .card-news .row--pre-game {
   position: relative;
   display: flex;
@@ -56,12 +70,27 @@ footer,
 .news .card-news .row--pre-game img {
   width: 3rem;
   height: 3rem;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   text-shadow: 2px 2px 10px #000;
 }
 
 .news .card-news .row--pre-game h5 + img {
-  margin-left: 1rem;
+  margin-left: 0.5rem;
+}
+
+.news .card-news .row--pre-game .scoreboard-x {
+  /* font-size: 2rem; */
+  /* margin: 0.5rem; */
+  display: flex;
+  align-items: center;
+  color: gainsboro;
+  font-weight: 300;
+}
+.news .card-news .row--pre-game .scoreboard {
+  font-size: 1.8rem;
+  margin: 0.5rem;
+  color: white;
+  font-weight: 500;
 }
 
 @keyframes flashesFlashes {
@@ -129,6 +158,7 @@ footer,
 
 .news .card-news .row--pre-game .textFlashes {
   font-weight: 300;
+  margin-left: 1rem;
   animation: flashesFlashes 14s infinite;
 }
 
@@ -259,9 +289,26 @@ footer {
     margin-top: 0;
   }
 
+  .news .card-news .game-time {
+    left: 1rem;
+    top: 11.3rem;
+  }
+
   .news .card-news .row--pre-game {
     left: 1rem;
-    top: 14rem;
+    top: 12rem;
+  }
+
+  .news .card-news .row--pre-game img {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .news .card-news .row--pre-game .scoreboard-x {
+    font-size: 1rem;
+  }
+  .news .card-news .row--pre-game .scoreboard {
+    font-size: 2.2rem;
   }
 
   .news .card-news p,
