--- a/web/src/components/Nav/styles.css
+++ b/web/src/components/Nav/styles.css
@@ -7,3 +7,16 @@ nav img {
   padding: 2rem 0;
   cursor: pointer;
 }
+@media screen and (max-width: 1024px) {
+  nav {
+    padding: 0;
+    margin: 0;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 800px) {
+}
+
+@media screen and (max-width: 405px) {
+}
