--- a/web/src/pages/Main/styles.css
+++ b/web/src/pages/Main/styles.css
@@ -36,7 +36,7 @@ footer,
   height: 100%;
   z-index: -1;
   opacity: 0.4;
-  background-image: url('../../assets/tabajara2x1chopp.jpeg');
+  background-image: url('../../assets/lima3x3folia.jpeg');
   background-repeat: no-repeat;
   background-position: 50% 0;
   background-size: cover;
@@ -58,7 +58,7 @@ footer,
   font-weight: 700;
   width: auto;
   left: 4rem;
-  top: 11.5rem;
+  top: 9rem;
   text-shadow: 2px 2px 10px #000;
   z-index: 3;
 }
@@ -69,7 +69,7 @@ footer,
   align-items: center;
   width: auto;
   left: 4rem;
-  top: 12rem;
+  top: 9.5rem;
   /* text-shadow: 2px 2px 10px #000; */
   z-index: 3;
 }
@@ -175,7 +175,7 @@ footer,
   position: relative;
   text-align: left;
   left: 4rem;
-  top: 13rem;
+  top: 10rem;
   text-shadow: 2px 2px 10px #000;
   z-index: 4;
 }
