--- a/web/src/components/CardTable/styles.css
+++ b/web/src/components/CardTable/styles.css
@@ -73,6 +73,8 @@
 .card-table .teams .results h1 {
   color: rgb(148, 148, 148);
   text-transform: lowercase;
+  position: relative;
+  bottom: 0.125rem;
 }
 
 .card-table .teams .results h2 {
