--- a/web/src/pages/Main/styles.css
+++ b/web/src/pages/Main/styles.css
@@ -1,6 +1,6 @@
 nav,
 footer,
-.news,
+/* .news, */
 .tables,
 .tables-camps,
 .tables-games,
@@ -16,12 +16,14 @@ footer,
 }
 
 .news {
-  margin-top: 2rem;
+  width: 100%;
+  /* background: red; */
+  height: 35rem;
 }
 
 .news .card-news {
   width: 100%;
-  height: 30rem;
+  height: 35rem;
   position: relative;
   overflow: hidden;
 }
@@ -38,7 +40,7 @@ footer,
   opacity: 0.4;
   background-image: url('../../assets/lima3x3folia.jpeg');
   background-repeat: no-repeat;
-  background-position: 50% 0;
+  background-position: 50%;
   background-size: cover;
 }
 
@@ -57,7 +59,7 @@ footer,
   font-size: 1rem;
   font-weight: 700;
   width: auto;
-  left: 4rem;
+  left: var(--padding-default);
   top: 9rem;
   text-shadow: 2px 2px 10px #000;
   z-index: 3;
@@ -68,10 +70,11 @@ footer,
   display: flex;
   align-items: center;
   width: auto;
-  left: 4rem;
+  left: var(--padding-default);
   top: 9.5rem;
   /* text-shadow: 2px 2px 10px #000; */
   z-index: 3;
+  display: none;
 }
 
 .news .card-news .row--pre-game img {
@@ -174,8 +177,8 @@ footer,
   height: auto;
   position: relative;
   text-align: left;
-  left: 4rem;
-  top: 10rem;
+  left: var(--padding-default);
+  top: 12rem;
   text-shadow: 2px 2px 10px #000;
   z-index: 4;
 }
@@ -186,7 +189,7 @@ footer,
 }
 
 .news .card-news p {
-  width: 70%;
+  width: 60%;
   font-size: 1.5rem;
   font-weight: 300;
 }
@@ -195,12 +198,22 @@ footer,
   display: grid;
   margin-top: 2rem;
   grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  /* background: red; */
+  border: 1px solid black;
+}
+
+.content-news {
+  width: 45rem;
+  display: flex;
+  flex-direction: column;
 }
 
 /* ======= SECTION TABBS */
 
 .container-table {
-  width: 100%;
+  width: 25rem;
+  /* background: blue; */
 }
 
 .content-table {
@@ -209,11 +222,13 @@ footer,
   justify-content: center;
   align-items: center;
   background: var(--primary-color);
+  /* background: yellow; */
   border-radius: 4px;
   padding: 1rem 1rem 2rem 1rem;
   height: auto;
 }
 
+.content-news h2,
 .container-table h2 {
   margin: 1rem 0;
   font-weight: 700;
@@ -273,14 +288,28 @@ footer {
     padding: 0;
   }
 
-  .container-table {
+  .tables {
     display: flex;
     flex-direction: column;
+    padding: 1rem;
   }
 
   .content-table {
     display: flex;
     flex-direction: column;
+  }
+
+  /*  */
+
+  .content-news {
+    width: 100%;
+  }
+
+  .container-table {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    width: 100%;
   }
 }
 
@@ -291,9 +320,19 @@ footer {
     padding: 0;
   }
 
+  .container-table {
+    display: flex;
+    flex-direction: column;
+  }
+
   .news {
     text-align: center;
     margin-top: 0;
+    height: 30rem;
+  }
+
+  .news .card-news {
+    height: 30rem;
   }
 
   .news .card-news .game-time {
