--- a/web/src/pages/Tables/styles.css
+++ b/web/src/pages/Tables/styles.css
@@ -107,4 +107,13 @@
     margin: 0;
     font-size: 1.5rem;
   }
+  .content-page-table .games-results {
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .content-page-table .games-results {
+    padding: 0;
+  }
 }
