--- a/web/src/components/Loading/styles.css
+++ b/web/src/components/Loading/styles.css
@@ -1,7 +1,6 @@
 .content-loading {
   color: var(--secondary-color);
-  width: 100%;
-  height: 6rem;
+  height: 20rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,6 +9,7 @@
   animation-duration: 5000ms;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+  z-index: 2;
 }
 
 @keyframes spin {
