--- a/web/src/components/TablesComponents/RunningStilch/styles.css
+++ b/web/src/components/TablesComponents/RunningStilch/styles.css
@@ -92,7 +92,7 @@ thead {
     overflow-x: hidden;
     position: absolute;
     min-width: 10rem;
-    /* background: rgba(60, 73, 87, 0.98); */
+    background: rgba(60, 73, 87, 0.98);
     z-index: 5;
   }
 }
@@ -100,6 +100,9 @@ thead {
 @media screen and (max-width: 370px) {
   .container-running-stilch {
     padding: 0;
+  }
+  .col-name {
+    background: rgba(60, 73, 87, 0.98);
   }
 
   td {
