--- a/web/src/pages/Tables/styles.css
+++ b/web/src/pages/Tables/styles.css
@@ -1,21 +1,31 @@
-.content-page-table {
+.content-page-tables {
   display: flex;
   flex-direction: column;
 }
 
-.content-page-table .games-results {
-  margin-top: 1rem;
+.content-page-tables .games-results {
   background: var(--primary-color);
   padding: 2rem;
-  min-height: 20rem;
   border-radius: 8px;
 }
 
-.content-page-table h1 {
+.content-page-copacepro,
+.content-page-tables h1 {
   margin-top: 1.5rem;
   font-weight: 500;
   color: var(--secondary-color);
+}
+
+.content-page-tables h1 {
   text-transform: uppercase;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.content-page-copacepro {
+  background: red;
+  display: flex;
+  flex-direction: column;
 }
 
 /* ==== TABLES GAMES */
@@ -66,14 +76,14 @@
     padding: 0.7rem;
   }
 
-  .content-page-table {
+  .content-page-tables {
     margin-top: 1.5rem;
   }
-  .content-page-table h1 {
+  .content-page-tables h1 {
     text-align: center;
   }
 
-  .content-page-table {
+  .content-page-tables {
     padding: 0 2%;
   }
 
