--- a/web/src/components/GunnersMain/styles.css
+++ b/web/src/components/GunnersMain/styles.css
@@ -129,6 +129,10 @@
     width: 2rem;
     height: 2rem;
   }
+
+  .tables-games {
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 405px) {
