--- a/web/src/components/Supplier/styles.css
+++ b/web/src/components/Supplier/styles.css
@@ -47,7 +47,7 @@ button:hover {
 
 @media screen and (max-width: 800px) {
   .container-supplier {
-    padding: 0 0.75rem;
+    padding: 0;
     justify-content: space-between;
   }
 
