--- a/web/src/components/CardTable/styles.css
+++ b/web/src/components/CardTable/styles.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 8px;
+  background-color: var(--primary-color);
   border: 1px solid var(--secondary-color);
   padding: 1rem;
 }
