--- a/web/src/components/CardNews/styles.css
+++ b/web/src/components/CardNews/styles.css
@@ -1,15 +1,17 @@
 .container-card-news {
-  background: var(--primary-color);
+  background: white;
   width: 100%;
   height: auto;
-  padding: 1rem;
+  padding: 0.5rem;
   border-radius: 4px;
+  border: 1px solid var(--border-color);
   display: flex;
   flex-direction: column;
 }
 
 .container-card-news h1 {
   font-weight: 300;
+  color: var(--primary-color-text);
 }
 .content-card-news {
   display: flex;
@@ -33,18 +35,22 @@
 }
 
 .content-text-card-news h1 {
-  color: #fff;
+  color: var(--secondary-color-text);
   font-size: 0.9rem;
-  font-weight: 300;
+  font-weight: 500;
 }
+
+.content-text-card-news p,
 .content-text-card-news h3 {
-  color: var(--secondary-color);
+  color: var(--primary-color-text);
+}
+
+.content-text-card-news h3 {
   font-size: 1.5rem;
   font-weight: 600;
 }
 
 .content-text-card-news p {
-  color: var(--secondary-color);
   font-size: 1.1rem;
   font-weight: 300;
   margin-top: 0.5rem;
