--- a/web/src/components/CardTable/styles.css
+++ b/web/src/components/CardTable/styles.css
@@ -4,9 +4,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-radius: 8px;
-  background-color: var(--primary-color);
-  border: 1px solid var(--secondary-color);
+  /* background-color: red; */
+  border-bottom: 1px solid var(--border-color);
   padding: 1rem;
 }
 
@@ -14,16 +13,16 @@
   margin-top: 1rem;
 }
 
+.card-table h3 {
+  color: var(--primary-color-text);
+  font-weight: 300;
+  text-align: center;
+}
 .card-table .teams .team-col h1 {
   font-weight: 300;
   font-size: 0.85rem;
-  color: var(--secondary-color);
+  color: var(--primary-color-text);
   text-transform: capitalize;
-}
-.card-table h3 {
-  color: var(--secondary-color);
-  font-weight: 300;
-  text-align: center;
 }
 
 .card-table h5 {
@@ -32,6 +31,7 @@
   text-transform: uppercase;
   font-weight: 800;
 }
+
 .card-table h4 {
   margin: 0;
   font-weight: 300;
