--- a/web/src/components/GunnersMain/styles.css
+++ b/web/src/components/GunnersMain/styles.css
@@ -14,7 +14,8 @@
 }
 
 .content-table-gunners {
-  background: var(--primary-color);
+  background: white;
+  border: 1px solid var(--border-color);
   border-radius: 4px;
   padding-top: 0.5rem;
   padding-left: 0.5rem;
@@ -34,12 +35,12 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 0.5rem;
-  border-bottom: 1px solid var(--secondary-color);
+  border-bottom: 1px solid var(--border-color);
   padding-bottom: 0.5rem;
 }
 
 .content-table-gunners .row-header h3 {
-  color: var(--secondary-color);
+  color: var(--primary-color-text);
   font-size: 0.75rem;
   font-weight: 300;
   text-transform: uppercase;
@@ -113,8 +114,8 @@
 
 .content-names p {
   font-size: 1rem;
-  font-weight: 300;
-  color: var(--secondary-color);
+  font-weight: 400;
+  color: var(--secondary-color-text);
 }
 
 @media screen and (max-width: 1024px) {
@@ -132,6 +133,10 @@
 
   .tables-games {
     padding: 0;
+  }
+
+  .container-table-gunners h2 {
+    padding: 0 0.5rem;
   }
 }
 
