--- a/web/src/components/Siderbar/styles.css
+++ b/web/src/components/Siderbar/styles.css
@@ -16,7 +16,7 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: var(--primary-color);
+  background: var(--primary-color-nav);
   padding: 0 1rem;
   transition: 0.5s ease;
 }
@@ -33,6 +33,7 @@ main {
   right: 50%;
   width: 10rem;
   height: auto;
+  cursor: pointer;
 }
 
 .sidebar {
@@ -57,6 +58,7 @@ main {
 .menu-pd {
   position: relative;
   left: 1rem;
+  color: white;
 }
 
 @media screen and (max-width: 800px) {
