--- a/web/src/components/GunnersMain/styles.css
+++ b/web/src/components/GunnersMain/styles.css
@@ -10,7 +10,7 @@
   margin: 1rem 0;
   font-weight: 700;
   text-transform: uppercase;
-  color: var(--secondary-color);
+  color: var(--primary-color-text);
 }
 
 .content-table-gunners {
@@ -51,7 +51,7 @@
 }
 
 .scroll-gunners::-webkit-scrollbar-thumb {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color-nav);
   border-radius: 35px;
 }
 
