--- a/web/src/pages/Tables/styles.css
+++ b/web/src/pages/Tables/styles.css
@@ -7,13 +7,14 @@
   background: var(--primary-color);
   padding: 2rem;
   border-radius: 8px;
+  /* z-index: -2; */
 }
 
 .content-page-copacepro,
 .content-page-tables h1 {
   margin-top: 1.5rem;
   font-weight: 500;
-  color: var(--secondary-color);
+  color: var(--primary-color-text);
 }
 
 .content-page-tables h1 {
@@ -43,7 +44,7 @@
 }
 
 .tables-camps .content-back h1 {
-  color: var(--secondary-color);
+  color: var(--primary-color-text);
   width: 100%;
   font-weight: 300;
   margin-left: 1rem;
