--- a/web/src/pages/Tables/styles.css
+++ b/web/src/pages/Tables/styles.css
@@ -1,10 +1,15 @@
 .content-page-tables {
   display: flex;
   flex-direction: column;
+  background: var(--bg-color);
+}
+
+.content-page-tables-alt {
+  padding: 0 20%;
 }
 
 .content-page-tables .games-results {
-  background: var(--primary-color);
+  background: var(--primary-color-text);
   padding: 2rem;
   border-radius: 8px;
 }
@@ -16,6 +21,10 @@
   color: var(--primary-color-text);
 }
 
+.content-page-tables-alt h1 {
+  color: var(--primary-color-text);
+}
+.content-page-tables-alt h1,
 .content-page-tables h1 {
   text-transform: uppercase;
   font-size: 1.5rem;
@@ -60,12 +69,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: var(--primary-color);
+  background: var(--primary-color-nav);
 }
 
 .content-navigation h1 {
   text-transform: uppercase;
   font-weight: 300;
+  color: white;
 }
 
 .news-arena,
@@ -77,7 +87,7 @@
 .container-tags .content-tags {
   display: flex;
   align-items: center;
-  padding: 0 2rem;
+  padding: 0.5rem 0;
   display: flex;
   gap: 1rem;
 }
@@ -93,6 +103,52 @@
 }
 .container-tags .content-tags .color-tag-bronze {
   background-color: #ff8c00;
+}
+
+.games-results-alt {
+  background: white;
+  padding: 1rem;
+  border-radius: 8px;
+  border: 1px solid var(--border-color);
+}
+
+.news-arena {
+  width: 100%;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.news-arena .title-news {
+  font-size: 4rem;
+  font-weight: 700;
+  text-align: center;
+  line-height: 4.2rem;
+  /* m
+  argin-bottom: 2rem; */
+}
+.news-arena .title-news p {
+  font-size: 2rem;
+  font-weight: 300;
+  text-align: center;
+}
+
+.news-arena img {
+  width: 20rem;
+  margin: 4rem 0;
+}
+
+.news-arena .paragraph-news {
+  width: 70%;
+  font-weight: 400;
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.news-arena .tags-teams {
+  width: 70%;
 }
 
 /* ===== RESPOSIVE */
@@ -136,8 +192,11 @@
     margin-bottom: 1.5rem;
   }
 
-  .content-page-tables {
+  .content-page-tables-alt {
     padding: 0;
+  }
+  .content-page-tables-alt h1 {
+    padding: 0 1rem;
   }
 
   .content-navigation {
@@ -169,17 +228,40 @@
   }
 
   .container-tags {
-    padding: 1rem 0 0 0;
+    padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
   }
+
   .container-tags .content-tags {
     padding: 0;
   }
   .text-tag {
     font-size: 0.8rem;
     color: var(--secondary-color-text);
+  }
+
+  .news-arena {
+    padding: 0.2rem;
+    margin: 2rem 0;
+  }
+  .news-arena .title-news {
+    width: 100%;
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
+  .news-arena .title-news p {
+    font-size: 1.5rem;
+  }
+  .paragraph-news {
+    min-width: 100%;
+    padding: 1rem;
+  }
+
+  .tags-teams {
+    min-width: 100%;
+    padding: 0 1rem;
   }
 }
 
