--- a/web/src/pages/Tables/styles.css
+++ b/web/src/pages/Tables/styles.css
@@ -158,6 +158,17 @@
   width: 70%;
 }
 
+.select-card-cup {
+  padding: 5rem 20%;
+  background: var(--bg-color);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 2rem;
+  height: 100vh;
+}
+
 /* ===== RESPOSIVE */
 
 @media screen and (max-width: 1024px) {
@@ -273,6 +284,15 @@
   .tags-teams {
     min-width: 100%;
     padding: 0 1rem;
+  }
+
+  .select-card-cup {
+    padding: 4rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 4rem;
   }
 }
 
