--- a/web/src/pages/Tables/styles.css
+++ b/web/src/pages/Tables/styles.css
@@ -157,16 +157,30 @@
 .news-arena .tags-teams {
   width: 70%;
 }
-
 .select-card-cup {
-  padding: 5rem 20%;
+  text-align: center;
   background: var(--bg-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100vh;
+}
+
+.main-hearts {
+  padding: 5rem 20%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: flex-start;
   justify-content: center;
   gap: 2rem;
-  height: 100vh;
+}
+
+.container-default .title-cup {
+  width: 100vw;
+  font-size: 1rem;
+  color: var(--primary-color-text);
+  margin-top: 1rem;
 }
 
 /* ===== RESPOSIVE */
@@ -286,7 +300,7 @@
     padding: 0 1rem;
   }
 
-  .select-card-cup {
+  .main-hearts {
     padding: 4rem 0;
     display: flex;
     flex-direction: column;
