--- a/web/src/pages/Main/styles.css
+++ b/web/src/pages/Main/styles.css
@@ -2,7 +2,7 @@ nav,
 footer,
 /* .news, */
 .tables,
-.tables-camps,
+/* .tables-camps, */
 /* .tables-games, */
 /* .content-page-table, */
 .content-page-tables,
