--- a/web/src/pages/Main/styles.css
+++ b/web/src/pages/Main/styles.css
@@ -42,7 +42,7 @@ footer,
   height: 100%;
   z-index: -1;
   opacity: 0.4;
-  background-image: url('../../assets/stadium/arenasoccer.jpg');
+  background-image: url('../../assets/semicopacepro.jpeg');
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
